tests/invalid/simple/Subtype_CompileFail_1.whiley
define scf1nat as int where $ >= 0

void System::main([string] args):
    scf1nat x
    x = -1
    print str(x)
